# data-server

./: CMakeLists.txt
include/: BitArray8.h  CommunicationDefinitions.h  Connection.h  ConnectionHandler.h  DataServer.h
src/: DataServer.cpp  main.cpp
